# turk_med_text_analysis

./: .gitignore  README.md  pyproject.toml
data_input/: text-1-en.txt  text-1-ru.txt  text-1-tatar.txt  text-1-turk.txt
data_output/: model_en_ner_bc5cdr_md_text-1-en.txt  model_xx_ent_wiki_sm_text-1-tatar.txt
data_output/model_Helios9/: BioMed_NER_text-1-en.txt
data_output/model_d4data/: biomedical-ner-all_text-1-en.txt
turkic_medicine_nlp/: hf_ner.py  spacy_ner.py
