[tool.poetry]
name = "turkic-medicine-nlp"
version = "0.1.0"
description = ""
authors = ["Vladimir <vladimir.pereverzev@nvi-reseach.com>"]
readme = "README.md"
packages = [{include = "turkic_medicine_nlp"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "1.26.4"
spacy = "3.4.1"
transformers = "^4.49.0"
torch = "^2.6.0"
en_ner_bc5cdr_md = { path = "../turkic_medicine_nlp/en_ner_bc5cdr_md-0.5.1.tar.gz" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
